--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bulma": "^0.7.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "react-switch-lang": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
