--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "bulma": "^0.7.5",
     "react": "^16.13.1",
+    "react-announcement": "^1.1.2",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
     "react-switch-lang": "^1.0.2"
