--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://loanaubergeon.github.io/laubergeon.fr/",
+  "homepage": "https://laubergeon.fr/",
   "name": "p_loan.me",
   "version": "0.1.0",
   "private": true,
